# serializer version: 1
# name: test_forecast_service[daily]
  dict({
    'weather.home': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 29.8,
          'cloud_coverage': 58,
          'condition': 'lightning-rainy',
          'datetime': '2020-07-26T05:00:00+00:00',
          'humidity': 60,
          'precipitation': 2.5,
          'precipitation_probability': 60,
          'temperature': 29.5,
          'templow': 15.4,
          'uv_index': 5,
          'wind_bearing': 166,
          'wind_gust_speed': 29.6,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 28.9,
          'cloud_coverage': 52,
          'condition': 'partlycloudy',
          'datetime': '2020-07-27T05:00:00+00:00',
          'humidity': 58,
          'precipitation': 0.0,
          'precipitation_probability': 25,
          'temperature': 26.2,
          'templow': 15.9,
          'uv_index': 7,
          'wind_bearing': 297,
          'wind_gust_speed': 14.8,
          'wind_speed': 9.3,
        }),
        dict({
          'apparent_temperature': 31.6,
          'cloud_coverage': 65,
          'condition': 'partlycloudy',
          'datetime': '2020-07-28T05:00:00+00:00',
          'humidity': 52,
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 31.7,
          'templow': 16.8,
          'uv_index': 7,
          'wind_bearing': 198,
          'wind_gust_speed': 24.1,
          'wind_speed': 16.7,
        }),
        dict({
          'apparent_temperature': 26.5,
          'cloud_coverage': 45,
          'condition': 'partlycloudy',
          'datetime': '2020-07-29T05:00:00+00:00',
          'humidity': 65,
          'precipitation': 0.0,
          'precipitation_probability': 9,
          'temperature': 24.0,
          'templow': 11.7,
          'uv_index': 6,
          'wind_bearing': 293,
          'wind_gust_speed': 24.1,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 22.2,
          'cloud_coverage': 50,
          'condition': 'partlycloudy',
          'datetime': '2020-07-30T05:00:00+00:00',
          'humidity': 55,
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'temperature': 21.4,
          'templow': 12.2,
          'uv_index': 7,
          'wind_bearing': 280,
          'wind_gust_speed': 27.8,
          'wind_speed': 18.5,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[hourly]
  dict({
    'weather.home': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 22.6,
          'cloud_coverage': 13,
          'condition': 'sunny',
          'datetime': '2025-09-12T14:00:00+00:00',
          'humidity': 48,
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'temperature': 22.5,
          'uv_index': 2,
          'wind_bearing': 239,
          'wind_gust_speed': 24.1,
          'wind_speed': 14.8,
        }),
        dict({
          'apparent_temperature': 22.9,
          'cloud_coverage': 17,
          'condition': 'sunny',
          'datetime': '2025-09-12T15:00:00+00:00',
          'humidity': 48,
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'temperature': 23.1,
          'uv_index': 2,
          'wind_bearing': 238,
          'wind_gust_speed': 22.2,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 20.6,
          'cloud_coverage': 23,
          'condition': 'sunny',
          'datetime': '2025-09-12T16:00:00+00:00',
          'humidity': 56,
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'temperature': 21.3,
          'uv_index': 1,
          'wind_bearing': 232,
          'wind_gust_speed': 18.5,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 18.2,
          'cloud_coverage': 29,
          'condition': 'sunny',
          'datetime': '2025-09-12T17:00:00+00:00',
          'humidity': 62,
          'precipitation': 0.0,
          'precipitation_probability': 2,
          'temperature': 19.5,
          'uv_index': 0,
          'wind_bearing': 224,
          'wind_gust_speed': 16.7,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 16.7,
          'cloud_coverage': 34,
          'condition': 'partlycloudy',
          'datetime': '2025-09-12T18:00:00+00:00',
          'humidity': 69,
          'precipitation': 0.0,
          'precipitation_probability': 3,
          'temperature': 17.7,
          'uv_index': 0,
          'wind_bearing': 219,
          'wind_gust_speed': 14.8,
          'wind_speed': 11.1,
        }),
        dict({
          'apparent_temperature': 14.9,
          'cloud_coverage': 30,
          'condition': 'partlycloudy',
          'datetime': '2025-09-12T19:00:00+00:00',
          'humidity': 77,
          'precipitation': 0.0,
          'precipitation_probability': 3,
          'temperature': 15.8,
          'uv_index': 0,
          'wind_bearing': 230,
          'wind_gust_speed': 13.0,
          'wind_speed': 11.1,
        }),
        dict({
          'apparent_temperature': 13.8,
          'cloud_coverage': 26,
          'condition': 'clear-night',
          'datetime': '2025-09-12T20:00:00+00:00',
          'humidity': 84,
          'precipitation': 0.0,
          'precipitation_probability': 3,
          'temperature': 14.6,
          'uv_index': 0,
          'wind_bearing': 259,
          'wind_gust_speed': 13.0,
          'wind_speed': 9.3,
        }),
        dict({
          'apparent_temperature': 13.8,
          'cloud_coverage': 22,
          'condition': 'clear-night',
          'datetime': '2025-09-12T21:00:00+00:00',
          'humidity': 86,
          'precipitation': 0.0,
          'precipitation_probability': 4,
          'temperature': 14.4,
          'uv_index': 0,
          'wind_bearing': 272,
          'wind_gust_speed': 13.0,
          'wind_speed': 9.3,
        }),
        dict({
          'apparent_temperature': 13.5,
          'cloud_coverage': 48,
          'condition': 'partlycloudy',
          'datetime': '2025-09-12T22:00:00+00:00',
          'humidity': 89,
          'precipitation': 0.0,
          'precipitation_probability': 4,
          'temperature': 13.9,
          'uv_index': 0,
          'wind_bearing': 265,
          'wind_gust_speed': 13.0,
          'wind_speed': 7.4,
        }),
        dict({
          'apparent_temperature': 13.2,
          'cloud_coverage': 74,
          'condition': 'partlycloudy',
          'datetime': '2025-09-12T23:00:00+00:00',
          'humidity': 91,
          'precipitation': 0.0,
          'precipitation_probability': 4,
          'temperature': 13.6,
          'uv_index': 0,
          'wind_bearing': 256,
          'wind_gust_speed': 11.1,
          'wind_speed': 7.4,
        }),
        dict({
          'apparent_temperature': 13.5,
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2025-09-13T00:00:00+00:00',
          'humidity': 90,
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'temperature': 13.9,
          'uv_index': 0,
          'wind_bearing': 244,
          'wind_gust_speed': 11.1,
          'wind_speed': 7.4,
        }),
        dict({
          'apparent_temperature': 13.6,
          'cloud_coverage': 98,
          'condition': 'cloudy',
          'datetime': '2025-09-13T01:00:00+00:00',
          'humidity': 89,
          'precipitation': 0.0,
          'precipitation_probability': 5,
          'temperature': 14.0,
          'uv_index': 0,
          'wind_bearing': 229,
          'wind_gust_speed': 9.3,
          'wind_speed': 7.4,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_subscription
  list([
    dict({
      'apparent_temperature': 29.8,
      'cloud_coverage': 58,
      'condition': 'lightning-rainy',
      'datetime': '2020-07-26T05:00:00+00:00',
      'humidity': 60,
      'precipitation': 2.5,
      'precipitation_probability': 60,
      'temperature': 29.5,
      'templow': 15.4,
      'uv_index': 5,
      'wind_bearing': 166,
      'wind_gust_speed': 29.6,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 28.9,
      'cloud_coverage': 52,
      'condition': 'partlycloudy',
      'datetime': '2020-07-27T05:00:00+00:00',
      'humidity': 58,
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 26.2,
      'templow': 15.9,
      'uv_index': 7,
      'wind_bearing': 297,
      'wind_gust_speed': 14.8,
      'wind_speed': 9.3,
    }),
    dict({
      'apparent_temperature': 31.6,
      'cloud_coverage': 65,
      'condition': 'partlycloudy',
      'datetime': '2020-07-28T05:00:00+00:00',
      'humidity': 52,
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 31.7,
      'templow': 16.8,
      'uv_index': 7,
      'wind_bearing': 198,
      'wind_gust_speed': 24.1,
      'wind_speed': 16.7,
    }),
    dict({
      'apparent_temperature': 26.5,
      'cloud_coverage': 45,
      'condition': 'partlycloudy',
      'datetime': '2020-07-29T05:00:00+00:00',
      'humidity': 65,
      'precipitation': 0.0,
      'precipitation_probability': 9,
      'temperature': 24.0,
      'templow': 11.7,
      'uv_index': 6,
      'wind_bearing': 293,
      'wind_gust_speed': 24.1,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 22.2,
      'cloud_coverage': 50,
      'condition': 'partlycloudy',
      'datetime': '2020-07-30T05:00:00+00:00',
      'humidity': 55,
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'temperature': 21.4,
      'templow': 12.2,
      'uv_index': 7,
      'wind_bearing': 280,
      'wind_gust_speed': 27.8,
      'wind_speed': 18.5,
    }),
  ])
# ---
# name: test_forecast_subscription.1
  list([
    dict({
      'apparent_temperature': 29.8,
      'cloud_coverage': 58,
      'condition': 'lightning-rainy',
      'datetime': '2020-07-26T05:00:00+00:00',
      'humidity': 60,
      'precipitation': 2.5,
      'precipitation_probability': 60,
      'temperature': 29.5,
      'templow': 15.4,
      'uv_index': 5,
      'wind_bearing': 166,
      'wind_gust_speed': 29.6,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 28.9,
      'cloud_coverage': 52,
      'condition': 'partlycloudy',
      'datetime': '2020-07-27T05:00:00+00:00',
      'humidity': 58,
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 26.2,
      'templow': 15.9,
      'uv_index': 7,
      'wind_bearing': 297,
      'wind_gust_speed': 14.8,
      'wind_speed': 9.3,
    }),
    dict({
      'apparent_temperature': 31.6,
      'cloud_coverage': 65,
      'condition': 'partlycloudy',
      'datetime': '2020-07-28T05:00:00+00:00',
      'humidity': 52,
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 31.7,
      'templow': 16.8,
      'uv_index': 7,
      'wind_bearing': 198,
      'wind_gust_speed': 24.1,
      'wind_speed': 16.7,
    }),
    dict({
      'apparent_temperature': 26.5,
      'cloud_coverage': 45,
      'condition': 'partlycloudy',
      'datetime': '2020-07-29T05:00:00+00:00',
      'humidity': 65,
      'precipitation': 0.0,
      'precipitation_probability': 9,
      'temperature': 24.0,
      'templow': 11.7,
      'uv_index': 6,
      'wind_bearing': 293,
      'wind_gust_speed': 24.1,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 22.2,
      'cloud_coverage': 50,
      'condition': 'partlycloudy',
      'datetime': '2020-07-30T05:00:00+00:00',
      'humidity': 55,
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'temperature': 21.4,
      'templow': 12.2,
      'uv_index': 7,
      'wind_bearing': 280,
      'wind_gust_speed': 27.8,
      'wind_speed': 18.5,
    }),
  ])
# ---
# name: test_weather[weather.home-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'weather',
    'entity_category': None,
    'entity_id': 'weather.home',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'accuweather',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WeatherEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '0123456',
    'unit_of_measurement': None,
  })
# ---
# name: test_weather[weather.home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'apparent_temperature': 22.8,
      'attribution': 'Data provided by AccuWeather',
      'cloud_coverage': 10,
      'dew_point': 16.2,
      'friendly_name': 'Home',
      'humidity': 67,
      'precipitation_unit': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
      'pressure': 1012.0,
      'pressure_unit': <UnitOfPressure.HPA: 'hPa'>,
      'supported_features': <WeatherEntityFeature: 3>,
      'temperature': 22.6,
      'temperature_unit': <UnitOfTemperature.CELSIUS: '°C'>,
      'uv_index': 6,
      'visibility': 16.1,
      'visibility_unit': <UnitOfLength.KILOMETERS: 'km'>,
      'wind_bearing': 180,
      'wind_gust_speed': 20.3,
      'wind_speed': 14.5,
      'wind_speed_unit': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'weather.home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'sunny',
  })
# ---
